# scpi-parser

libscpi/: CMakeLists.txt
libscpi/inc/: CMakeLists.txt
libscpi/inc/scpi/: config.h  parser.h
libscpi/src/: CMakeLists.txt  parser.c
